
**7.0.2 (unreleased)**

* **BACKWARD INCOMPATIBLE** Revert the change (released in v7.0.0) that
  required quoting in requirements files around specifiers containing
  environment markers. (:pull:`2841`)

* **BACKWARD INCOMPATIBLE** Revert the accidental introduction of support for
  options interleaved with requirements, version specifiers etc in
  ``requirements`` files. (:pull:`2841`)

**7.0.1 (2015-05-22)**

* Don't build and cache wheels for non-editable installations from VCSs.

* Allow ``--allow-all-external`` inside of a requirements.txt file, fixing a
  regression in 7.0.


**7.0.0 (2015-05-21)**

* **BACKWARD INCOMPATIBLE** Removed the deprecated ``--mirror``,
  ``--use-mirrors``, and ``-M`` options.

* **BACKWARD INCOMPATIBLE** Removed the deprecated ``zip`` and ``unzip``
  commands.

* **BACKWARD INCOMPATIBLE** Removed the deprecated ``--no-install`` and
  ``--no-download`` options.

* **BACKWARD INCOMPATIBLE** No longer implicitly support an insecure origin
  origin, and instead require insecure origins be explicitly trusted with the
  ``--trusted-host`` option.

* **BACKWARD INCOMPATIBLE** Removed the deprecated link scraping that attempted
  to parse HTML comments for a specially formatted comment.

* **BACKWARD INCOMPATIBLE** Requirements in requirements files containing
  markers must now be quoted due to parser changes from (:pull:`2697`) and
  (:pull:`2725`).  For example, use ``"SomeProject; python_version < '2.7'"``,
  not simply ``SomeProject; python_version < '2.7'``

* Ignores bz2 archives if Python wasn't compiled with bz2 support.
  Fixes :issue:`497`

* Support ``--install-option`` and ``--global-option`` per requirement in
  requirement files (:pull:`2537`)

* Build Wheels prior to installing from sdist, caching them in the pip cache
  directory to speed up subsequent installs. (:pull:`2618`)

* Allow fine grained control over the use of wheels and source builds.
  (:pull:`2699`)
