@@ -10,6 +10,9 @@
   options interleaved with requirements, version specifiers etc in
   ``requirements`` files. (:pull:`2841`)
 
+* Expand ``~`` in the cache directory when caching wheels, fixes :issue:`2816`.
+
+
 **7.0.1 (2015-05-22)**
 
 * Don't build and cache wheels for non-editable installations from VCSs.
